# solver

./: .gitignore  CLAUDE.md  Cargo.toml  HOW_TO_WRITE_A_SOLVER.md  LICENSE  README.md  build.sh
benches/: solver_benchmarks.rs
crates/solver-wasm/: Cargo.toml
crates/solver-wasm/src/: lib.rs  tree_view.rs
data/abstractions/: flop-SemiAggSI.abs
examples/: kuhn13.rs  pio_benchmark.rs  push_fold.rs  river_solver.rs  rps.rs  tree_builder.rs
examples/poker/: cards.rs  equity.rs  hand_eval.rs  mod.rs
scripts/: generate_abstractions.sh
src/: cfr.rs  game.rs  info_abstraction.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs
src/poker/: abstraction.rs  abstraction_gen.rs  abstraction_io.rs  board_parser.rs  builtin_abstractions.rs  clustering.rs  ehs.rs  hands.rs  indexer.rs  isomorphism.rs  matchups.rs  mod.rs  postflop_game.rs  postflop_solver.rs  range_parser.rs
src/tree/: action.rs  bet_size.rs  builder.rs  config.rs  memory.rs  mod.rs  position.rs
webapp/: .gitignore  abstraction.html  index.html  style.css
webapp/js/: abstraction.js  main.js  solver_wasm.js  solver_wasm_bg.wasm  tauri-bridge.js  tree-view.js
