[package]
name = "solver"
version = "0.1.0"
edition = "2024"
description = "Counterfactual regret minimization (CFR) solver for n-player games"
license = "MIT"
keywords = ["cfr", "game-theory", "nash-equilibrium", "solver"]
categories = ["algorithms", "game-development", "mathematics"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"
