[workspace]
members = [".", "crates/solver-wasm"]

[package]
name = "solver"
version = "0.1.0"
edition = "2024"
description = "Counterfactual regret minimization (CFR) solver for n-player games"
license = "MIT"
keywords = ["cfr", "game-theory", "nash-equilibrium", "solver"]
categories = ["algorithms", "game-development", "mathematics"]

[features]
default = ["rand", "rayon"]
serde = ["dep:serde"]
rand = ["dep:rand"]
rayon = ["dep:rayon"]
zstd = ["dep:zstd"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"], optional = true }
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
zstd = { version = "0.13", optional = true }
